--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,14 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>	
+    <repository>
+        <id>releases</id>
+        <url>http://nexus3-cicd.apps006.amosdemo.io/repository/releases/</url>
+    </repository>	  
+    <snapshotRepository>
+        <id>maven-snapshots</id>
+        <url>http://nexus3-cicd.apps006.amosdemo.io/repository/maven-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
