--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,11 @@
   </build>
   <distributionManagement>	
     <repository>
-        <id>myapp</id>
+        <id>myapp1</id>
         <url>http://nexus3-cicd.apps006.amosdemo.io/repository/myapp1/</url>
     </repository>	  
     <snapshotRepository>
-        <id>myapp</id>
+        <id>myapp1</id>
         <url>http://nexus3-cicd.apps006.amosdemo.io/repository/myapp1/</url>
     </snapshotRepository>
   </distributionManagement>
